--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,467 +1,304 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+$myFont1: 'Roboto', sans-serif;
+$myFont2: 'Ballet', sans-serif;
 
-html, body {
-  font-family: 'Lato', sans-serif;
-  font-family: 'Montserrat', sans-serif;
-  color: #011312;
-  margin: 0;
+
+body {
   padding: 0;
-  height: 0;
-}
-
-p, h1, h2, h3, ul{
+  font-family: $myFont1;
+  font-family: $myFont2;
+  color: #FFF;;
   margin: 0;
-  padding: 0;
+  background-color: #171717;
 }
 
-ul{
-  list-style-type: none;
+.body__container{
+  width: 1200px;
+  margin: 40px auto 0;
 }
 
-a {
-  text-decoration: none;
-  outline: 0;
-}
-
-.features__container{
-  max-width: 280px;
-  margin: 80px auto 0;
-  text-align: center;
-}
-
-.features__title{
-  color: #635C73;
-  text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 27px;
-}
-
-.features__text{
-  color: #323232;
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  margin: 0;
-}
-
-.features__buttons{
-  width: 290px;
+.header__body{
   display: flex;
-  row-gap: 10px;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 36px auto 120px;
+  justify-content: space-between;
+  margin-bottom: 90px;
 }
 
-.button__content {
-  overflow: hidden;
-  font-family: "Segoe UI",sans-serif;
-  font-size: 0;
-
-  & .btn, .button__count{
-    padding: 6px 8px;
-    display: inline-flex;
-    font-size: 12px;
-    color: #24292f;
-    font-weight: 600;
-    vertical-align: bottom;
-    cursor: pointer;
-    border: 1px solid;
-    background-color: #ebf0f4;
-    border-color: #ccd1d5; 
-    border-color: rgba(31,35,40,.15);
-    border-radius: 0.25em 0 0 0.25em;
-    line-height: 16px;
-  }
-  
-  & .button__count {
-    color: #24292f;
-    background-color: #fff;
-    border-left: 0;
-    border-radius: 0 0.25em 0.25em 0;
-    border-color: rgba(31,35,40,.15);
-  }
-
-  & span{
-    padding-left: 5px;
-  }
+.header__img{
+  width: 355px;
+  height: 80px;
 }
 
-.feature__content{
+.header__button{
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: "Montserrat", sans-serif;
-
-}
-
-.features__title2{
-  color: #8D81AC;
-  text-align: center;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  margin: 0;
-  margin-bottom: 36px;
-}
-
-.feature__content-title{
-  color: #323232;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  margin: 0;
-  margin-top: 27px;
-}
-
-.feature__content-text{
-  color: #848E97;
-  text-align: center;
-  font-family: "Lato", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  margin: 14px 0 39px;
-}
-
-.feature__photo{
-  margin: 12px 0 6px;
-  max-width: 320px;
-  height: 381px;
-  object-fit: cover;
-  object-position: 0% 0;
-  position: absolute;
-  right: 0;
-}
-
-// Price html
-.price__container {
-  margin: 480px auto;
-  text-align: center;
-  background-color: #4b3b4e;
-  font-family: "Montserrat", sans-serif;
-}
-
-.price__title{
-  max-width: 280px;
-  margin: 0 auto 32px;
-  color: #FFF;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 42px;
-  padding-top: 74px;
-}
-
-.price__content{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #FFF;
-}
-
-.price__list{
-  width: 257px;
-  margin: 0 auto 18px;
-}
-
-.price__list:nth-child(3){
-  width: 300px;
-
-  & .list__title{
-    background-color: #463048;
-    padding: 43px 0;
-  }
-
-  & .list__content{
-    background-color: #473149D6;
-  }
-
-  & .list__price{
-    font-size: 82px;
-  }
-
-  & .list__description{
-    line-height: 32px;
-  }
-
-  & .list__button{
-  font-size: 16px;
-  line-height: 18px;
-  padding: 18.5px 48px;
-  }
-}
-
-.list__title{
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  text-transform: uppercase;
-  padding: 36px;
-  background-color: rgba(255, 255, 255, 0.06);
-}
-
-.list__content{
-  background-color: rgba(255, 255, 255, 0.11);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.list__price{
-  font-size: 60px;
-  font-style: normal;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 30px 0 20px;
-}
-
-.list__text{
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  text-transform: uppercase;
-}
-
-.list__line{
-  margin: 40px 0 30px;
-}
-
-.list__description{
   width: 210px;
-  font-size: 16px;
+  height: 50px; 
+  border: 1px solid #E4B564;
+  background-color: #171717;
+  padding: 10px 10px 10px 25px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.header__button-text{
+  color: #E4B564;
+  font-family: $myFont2;
+  font-size: 18px;
+  line-height: 30px;
+  text-decoration: none;
+  margin: 0;
+}
+
+.header__button-img{
+  display: flex;
+  margin-right: 8px;
+  margin-top: 4px;
+  width: 16px;
+}
+
+.main__title{
+  font-family: $myFont2;
+  font-size: 50px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 28px
+  font-weight: 700;
+  margin: 0;
 }
 
-.list__button{
-  color: #fff;
-  margin: 36px 0;
-  font-size: 15px;
+.main__undertitel{
+  font-family: $myFont2;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 15px;
-  text-transform: uppercase;
-  border: none;
-  padding: 15px 38px;
-  background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 40px;
+  font-weight: 700;
+  line-height: 28px;
+  width: 1100px;
+  margin: 45px 0 0 0;
 }
 
-
-@media screen and (min-width: 767px) {
-  
-  .features__container{
-    min-width: 767px;
-  }
-
-    
-  .features__title{
-    font-size: 46px;
-  }
-
-  .features__text{
-    font-size: 24px;
-  }
-
-  .features__buttons{
-    width: 420px;
-  }
-
-  .feature__content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .feature__img{
-    margin: 0 auto;
-  }
-
-  .features__title2{
-    font-size: 53px;
-  }
-  
-  .feature__main{
-    max-width: 620px;
-  }
-
-  .feature__content-title{
-    text-align: left;
-    font-size: 20px;
-  }
-  
-  .feature__content-text{
-    text-align: left;
-    font-size: 17px;
-  }
-  
-  .feature__photo{
-    float: right;
-    max-width: 700px;
-    height: 519px;
-  }
-
-  // Price html
-
-  .price__container{
-    margin-top: 600px;
-    background-image: url(../img/bg-price.png);
-    background-repeat: no-repeat;
-    overflow: hidden;
-    background-color: #4b3b4e;
-    background-position: 50% 0;
-  }
-
-  .price__title{
-    max-width: 560px;
-    color: #FFF;
-    font-size: 42px;
-    line-height: 44px;
-    padding-top: 80px;
-  }
-
-  .price__content{
-    width: 600px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 40px auto 0;
-    padding-bottom: 95px;
-    column-gap: 20px;
-    row-gap: 30px;
-  }
-
-  .price__list{
-    width: 280px;
-    min-height: 460px;
-    margin: 0;
-  }
-
-  .price__list:nth-child(3){
-    
-    
-    & .list__content{
-      height: 464px;
-    }
-
-    & .list__button{
-      margin-top: 64px;
-    }
-  }
-  
-  .list__content{
-    height: 400px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-
-  .list__description{
-    height: 64px;
-  }
-
-  .list__button{
-    margin-top: 36px;
-    margin-bottom: 0;
-  }
+.main__content{
+  margin: 40px 0 160px 0;
+  display: grid;
+  grid-template-columns: repeat(6, 15fr);
+  grid-auto-rows: 470px;
+  grid-column-gap: 30px;
+  grid-row-gap: 25px;
 }
 
-@media screen and (min-width: 1200px) {
-  
-  .features__container{
-    min-width: 1200px;
-    width: 1300px;
-    max-width: 1900px;
-  }
+.main__content-box1, .main__content-box2, .main__content-box3, .main__content-box4, .main__content-box5{
+  text-align: center;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+}
 
-    
-  .features__title{
-    font-size: 54px;
-  }
+.main__content-box1{
+  padding: 220px 0;
+  background-color: #634F2C;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
 
-  .features__text{
-    font-size: 21px;
-    max-width: 861px;
-    margin: 0 auto;
-  }
+.main__content-box2{
+  padding: 220px 40px;
+  background-color: #B4A385;
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
 
-  .features__buttons{
-    width: 420px;
-  }
+.main__content-box3{
+  padding: 220px 0;
+  background-color: #E4B564;
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
 
-  .feature__content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 526px;
-  }
-  
-  .feature__body{
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-  }
+.main__content-box4{
+  padding: 220px 0;
+  background-color: #635A4A;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
 
-  .feature__img{
-    margin: 0 auto;
-  }
+.main__content-box5{
+  padding: 220px 0;
+  background-color: #635A4A;
+  grid-column-start: 4;
+  grid-column-end: 7;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
 
-  .features__title2{
-    font-size: 53px;
-    position: absolute;
-    top: 17px;
-    right: 30px;
-  }
-  
-  .feature__main{
-    max-width: 390px;
-  }
+.main__nextcontent{
+  margin: 95px 0 190px 0;
+  display: grid;
+  grid-template-columns: repeat(6, 15fr);
+  grid-template-rows: 255px 50px 140px 100px 280px;
+  grid-column-gap: 30px;
+  grid-row-gap: 25px;
+}
 
-  .feature__content-title{
-    text-align: left;
-    font-size: 16px;
-  }
-  
-  .feature__content-text{
-    text-align: left;
-    font-size: 14px;
-  }
-  
-  .feature__photo{
-    float: right;
-    max-width: 700px;
-    height: 519px;
-    margin-top: 70px;
-  }
+.main__nextcontent-box1, .main__nextcontent-box2, .main__nextcontent-box3, .main__nextcontent-box4, .main__nextcontent-box5, .main__nextcontent-box6, .main__nextcontent-box7{
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+  padding: 44px 0 0 52px;
+}  
 
-  .price__container{
-    background-size:cover;
-    margin-top: 34px;
-  }
+.main__nextcontent-title{
+  font-family: $myFont1;
+  font-weight: 700;
+  margin: 0;
+}
 
-  .price__title{
-    max-width: 650px;
-    font-size: 48px;
-    line-height: 50px;
-  }
+.main__nextcontent-box1{
+  background-color: #0E0E0E;
+  grid-column: 1/3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
 
-  .price__content{
-    margin-top: 60px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.main__nextcontent-box2{
+  background-color: #242424;
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
 
+.main__nextcontent-box3{
+  background-color: #1F1F1F;
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.main__nextcontent-box4{
+  background-color: #1F1F1F;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+
+.main__nextcontent-box5{
+  background-color: #E4B564;
+  color: #000;
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 4;
+  grid-row-end: 6;
+}
+
+.main__nextcontent-box6{
+  background-color: #0E0E0E;
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 2;
+  grid-row-end: 5;
+}
+
+.main__nextcontent-box7{
+  font-weight: 700;
+  background-color: #0A0909;
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+
+.footer__body{
+  background-color: #0E0E0E;  
+  margin-bottom:240px;
+  padding: 170px 230px 0 230px;
+}
+
+.footer__head{
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__button{
+  width: 180px;
+  height: 50px; 
+  border: 1px solid #E4B564;
+  background-color: #0E0E0E;
+  padding: 10px 40px;
+  text-align: center;
+}
+
+.footer__button-text{
+  color: #E4B564;
+  font-family: $myFont2;
+  font-size: 18px;
+  line-height: 30px;
+  text-decoration: none;
+  margin: 0;
+}
+
+.footer__content{
+  margin: 95px auto 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 15fr);
+  grid-template-rows: repeat(2, 390px);
+  text-align: center;
+}
+
+.footer__content-img{
+  margin: 0;
+  padding-bottom: 8px;
+}
+
+.footer__content-text{
+  margin: 0;
+}
+
+.footer__content-box1{
+  background-color: #634F2C;
+  grid-column: 1;
+  grid-row: 1;
+  padding: 170px 0;
+}
+
+.footer__content-box2{
+  padding: 60px 40px;
+  background-color: #E8D2ABC2;
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.footer__content-box3{
+  padding: 170px 0 ;
+  background-color: #E4B564;
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.footer__content-box4{
+  background-color: #635A4A;
+  grid-column: 1;
+  grid-row: 2;
+  padding: 112px 0;
+}
+
+.footer__content-box5{
+  padding: 60px 40px;
+  background-color: #B08C4D;
+  grid-column: 2;
+  grid-row: 2;
+  padding: 170px 0;
+}
+
+.footer__content-box6{
+  padding: 170px 0 ;
+  background-color: #634F2C;
+  grid-column: 3;
+  grid-row: 2;
 }
